# cppa-cursor-browser

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  Makefile  README.md  app.py  launcher.py  pyproject.toml  requirements-lock.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: tests.yml  update-lock.yml
api/: composers.py  config_api.py  export_api.py  flask_config.py  logs.py  pdf.py  search.py  workspaces.py
benchmarks/: README.md  baselines.json
docs/: API_DEPRECATION.md
models/: __init__.py  bubble_display.py  cli_session.py  conversation.py  conversation_types.py  errors.py  export.py  from_dict_validation.py  parse_warnings.py  raw_access.py  search.py  workspace.py
scripts/: check_benchmark_regression.py  export.py  profile_search.py  profile_search_breakdown.py  profile_search_window.py  reduce_baselines.py
services/: cli_tabs.py  export_engine.py  search.py  search_index.py  summary_cache.py  workspace_composer_scan.py  workspace_context.py  workspace_db.py  workspace_listing.py  workspace_resolver.py  workspace_tabs.py
static/css/: style.css
static/js/: app.js  download.js  theme-bootstrap.js
templates/: base.html  config.html  index.html  search.html  workspace.html
tests/: __init__.py  _fixture_ids.py  _helpers.py  cli-export-qa-checklist.md  conftest.py  test_api_endpoints.py  test_api_error_codes.py  test_api_export.py  test_api_search.py  test_api_workspaces.py  test_blob_parsing_fuzz.py  test_check_benchmark_regression.py  test_cli_args.py  test_cli_chat_reader.py  test_cli_export_e2e.py  test_cli_tabs.py  test_csp_header.py  test_cursor_md_exporter.py  test_exclusion_rules.py  test_export_base_dir_override.py  test_export_engine.py  test_export_exclusion_filtering.py  test_from_dict_validation.py  test_get_workspace_cli_malformed.py  test_invalid_workspace_aliases.py  test_models.py  test_models_wired_at_read_sites.py  test_normalize_file_path.py  test_parse_failure_logging.py  test_parse_warnings.py  test_pdf_export.py  test_project_layouts_dict_shape.py  test_project_path_boundary.py  test_raw_accessors.py  test_reduce_baselines.py  test_search_exclusion_filtering.py  test_search_helpers.py  test_search_index.py  test_search_index_windows.py  test_set_workspace_multiworker.py  (+23 more)
tests/benchmarks/: conftest.py  constants.py  test_export_bench.py  test_parse_bench.py  test_search_bench.py  test_summary_cache_bench.py
utils/: cli_chat_reader.py  cursor_md_exporter.py  debug_flag.py  display_bubble.py  exclusion_rules.py  path_helpers.py  path_validation.py  text_extract.py  tool_parser.py  workspace_descriptor.py  workspace_path.py
