[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "cppa-cursor-browser"
version = "0.1.0"
description = "Flask web application for browsing and exporting Cursor AI chat histories"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "C++ Alliance", email = "admin@cppalliance.org" }]
requires-python = ">=3.10"

# Runtime dependencies — bounded on both sides so CI resolves deterministically
# and breaking major releases are caught at install time rather than at runtime.
# Upper bounds are conservative: pin to current known-compatible major version.
# See also: requirements.txt (backward-compat alias; pyproject.toml is canonical).
dependencies = [
    "flask>=3.0,<4",
    "fpdf2>=2.7,<3",
    # Security floor: fpdf2 allows Pillow>=8.3.2 (no upper cap); pin 12.x to avoid
    # known high-severity CVEs in Pillow 10.x (e.g. CVE-2024-28219 and later advisories).
    "pillow>=12.2.0,<13",
]

[project.optional-dependencies]
# Desktop launcher (pywebview pulls in heavy system libs — GTK/Qt on Linux —
# so it is intentionally excluded from the web-server and CI installs).
desktop = ["pywebview>=5.0,<6"]

# Development tooling: testing + type checking.
dev = [
    "pytest>=8,<9",
    "pytest-benchmark>=4,<5",
    "mypy>=1.10,<2",
    "hypothesis>=6.100,<7",
]

[tool.pytest.ini_options]
# Requires pytest-benchmark (pip install -e ".[dev]") for default `pytest` invocations.
pythonpath = ["."]
addopts = "--benchmark-skip"
testpaths = ["tests"]
markers = [
    "benchmark: performance benchmarks (pytest-benchmark)",
]

[project.scripts]
# Primary CLI: export Cursor chat histories to Markdown / zip.
# Usage: cursor-chat-export [--since all|last] [--out DIR] [--no-zip] [--help]
cursor-chat-export = "scripts.export:main"

# Desktop launcher (requires the [desktop] extra to be installed).
cursor-chat-browser = "launcher:main"

[project.urls]
Repository = "https://github.com/cppalliance/cppa-cursor-browser"
Issues = "https://github.com/cppalliance/cppa-cursor-browser/issues"

# ── Build configuration ────────────────────────────────────────────────────────
# Flat layout (no src/ directory): enumerate every importable package and the
# two top-level application modules so the installed wheel has the same import
# surface as the repo checkout.
[tool.hatch.build.targets.wheel]
include = [
    "api/",
    "models/",
    "scripts/",
    "services/",
    "utils/",
    "templates/",
    "static/",
    "app.py",
    "launcher.py",
]

# sdist includes tests + ancillary files; wheel is runtime-only.
[tool.hatch.build.targets.sdist]
include = [
    "api/",
    "models/",
    "scripts/",
    "services/",
    "utils/",
    "tests/",
    "templates/",
    "static/",
    "app.py",
    "launcher.py",
    "requirements.txt",
    "README.md",
    "docs/",
    "CHANGELOG.md",
    "DEPLOYMENT.md",
    "LICENSE",
    "cursor-browser.spec",
]

# ── Mypy ──────────────────────────────────────────────────────────────────────
# Mirrors the flags used in .github/workflows/tests.yml so local `mypy .`
# and CI produce identical results.
[tool.mypy]
strict = true
ignore_missing_imports = true
pretty = true
# Exclude virtual-env and build artefact directories so that `mypy .` from the
# repo root matches CI behaviour (CI runs in a clean runner without a local venv).
# Anchored regexes — unanchored `venv/` would match any path segment containing "venv/".
exclude = ["^venv/", "^\\.venv/", "^build/", "^dist/"]

# Test modules use unittest/pytest patterns that are not worth strict-checking
# alongside production code; route handlers and utils are fully strict.
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
